--- a/U_tag_7/app/src/main/cpp/CMakeLists.txt
+++ b/U_tag_7/app/src/main/cpp/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 3.10.2)
 
 # Declares and names the project.
 
-project("c_c")
+project("Tag_Ble_uuid_send_app")
 
 # Creates and names a library, sets it as either STATIC
 # or SHARED, and provides the relative paths to its source code.
@@ -15,7 +15,7 @@ project("c_c")
 # Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
-        c_c
+        Tag_Ble_uuid_send_app
 
         # Sets the library as a shared library.
         SHARED
@@ -45,7 +45,7 @@ find_library( # Sets the name of the path variable.
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-        c_c
+        Tag_Ble_uuid_send_app
 
         # Links the target library to the log library
         # included in the NDK.
