--- a/S_Tag_Tool/S_Tag_Tool/app/src/main/AndroidManifest.xml
+++ b/S_Tag_Tool/S_Tag_Tool/app/src/main/AndroidManifest.xml
@@ -50,6 +50,11 @@
             android:theme="@style/Theme.S_Tag_Tool"
             android:parentActivityName=".MainActivity"
             android:exported="true" />
+        <activity
+            android:name="com.ble_connect.Connect_D5_Activity"
+            android:theme="@style/Theme.S_Tag_Tool"
+            android:parentActivityName=".MainActivity"
+            android:exported="true" />
         <activity android:name="com.ble_connect.DeviceListActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Dialog"/>
