--- a/inner_S_Tool/app/build.gradle
+++ b/inner_S_Tool/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
     implementation 'com.google.android.material:material:1.6.1'
+
+    implementation 'org.jsoup:jsoup:1.13.1'
 }
