--- a/inner_S_Tool/app/src/main/AndroidManifest.xml
+++ b/inner_S_Tool/app/src/main/AndroidManifest.xml
@@ -6,9 +6,11 @@
         android:name="android.permission.READ_PHONE_STATE"
         android:maxSdkVersion="29" />
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
-    <uses-permission android:name="android.permission.BLUETOOTH"
+    <uses-permission
+        android:name="android.permission.BLUETOOTH"
         android:maxSdkVersion="30" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"
+    <uses-permission
+        android:name="android.permission.BLUETOOTH_ADMIN"
         android:maxSdkVersion="30" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
@@ -23,20 +25,28 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-feature android:name="android.hardware.bluetooth" android:required="false"/>
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="false"/>
+
+    <uses-feature
+        android:name="android.hardware.bluetooth"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Inner_S_Tool">
+        android:theme="@style/Theme.Inner_S_Tool"
+        android:usesCleartextTraffic="true">
+
         <activity
             android:name=".SplashActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Notitel"
+            android:usesCleartextTraffic="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,10 +55,24 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:windowSoftInputMode="adjustNothing"
-            android:theme="@style/Theme.Inner_S_Tool"
+            android:exported="true"
             android:screenOrientation="portrait"
-            android:exported="true"/>
+            android:theme="@style/Theme.Inner_S_Tool"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".MainSectorActivity"
+            android:parentActivityName=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Inner_S_Tool"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".MainSectorEntranceActivity"
+            android:parentActivityName=".MainSectorActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Inner_S_Tool"
+            android:windowSoftInputMode="adjustNothing" />
     </application>
 
 </manifest>
