--- a/inner_S_Tool/app/src/main/AndroidManifest.xml
+++ b/inner_S_Tool/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/i_inner_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.Inner_S_Tool"
         android:usesCleartextTraffic="true">
@@ -55,6 +55,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainLoginActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Inner_S_Tool"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
