inner_S 위치리스트강조 및 퇴장기능 추가

--- a/inner_S_Tool/app/src/main/AndroidManifest.xml
+++ b/inner_S_Tool/app/src/main/AndroidManifest.xml
@@ -85,7 +85,7 @@
             android:name="com.nineone.inner_s_tool.Background_Service"
             android:enabled="true"
             android:exported="false"
-            android:stopWithTask="true"
+            android:stopWithTask="false"
             android:foregroundServiceType="location|connectedDevice" />
     </application>
 
