--- a/inner_S_Tool/app/build.gradle
+++ b/inner_S_Tool/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
 
     implementation 'org.jsoup:jsoup:1.13.1'
+
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
