--- a/inner_S_Tool/app/src/main/AndroidManifest.xml
+++ b/inner_S_Tool/app/src/main/AndroidManifest.xml
@@ -25,9 +25,13 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-feature android:name="android.hardware.bluetooth" android:required="false"/>
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="false"/>
 
+    <uses-feature
+        android:name="android.hardware.bluetooth"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="false" />
     <uses-feature
         android:name="android.hardware.bluetooth"
         android:required="false" />
@@ -68,25 +72,32 @@
             android:theme="@style/Theme.Inner_S_Tool"
             android:windowSoftInputMode="adjustNothing" />
         <activity
-            android:name=".MainSectorActivity"
-            android:parentActivityName=".MainActivity"
+            android:name=".Main_Card_Activity"
+            android:theme="@style/Theme.Inner_S_Tool"
+            android:screenOrientation="portrait"
             android:exported="true"
+            android:windowSoftInputMode="adjustNothing"/>
+        <activity
+            android:name=".MainSectorActivity"
+            android:exported="true"
+            android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Inner_S_Tool"
             android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".MainSectorEntrance_Activity"
-            android:parentActivityName=".MainSectorActivity"
             android:exported="true"
+            android:parentActivityName=".MainSectorActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Inner_S_Tool"
             android:windowSoftInputMode="adjustNothing" />
+
         <service
-            android:name="com.nineone.inner_s_tool.Background_Service"
+            android:name=".Background_Service"
             android:enabled="true"
             android:exported="false"
-            android:stopWithTask="false"
-            android:foregroundServiceType="location|connectedDevice" />
+            android:foregroundServiceType="location|connectedDevice"
+            android:stopWithTask="false" />
     </application>
 
 </manifest>
