--- a/S_Tag_Tool/app/build.gradle
+++ b/S_Tag_Tool/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.nineone.s_tag_tool"
+        applicationId "com.nineone.s_tag_tool2"
         minSdk 21
         targetSdk 32
         versionCode 2
